# tensorflow-pod

./: .gitignore  Makefile  README.md  patch.diff
tfdeploy/: CMakeLists.txt
tfdeploy/src/: example_node.cpp  tensor_c_api.h  tfutils.h
